@@ -111,13 +111,9 @@ get_file(F, Exists, Ext, Dir, Default, File) :-
 	->  get(F, directory, DefDir)
 	;   DefDir = Dir
 	),
-	(   Default == @default
-	->  DefFile = Default
-	;   get(Default, name, DefFile)
-	),
 	get(F, label, Label),
 	get(@display, win_file_name, Mode, Filters,
-	    Label, DefFile, DefDir, File),
+	    Label, Default, DefDir, File),
 	file_directory_name(File, NewDir),
 	send(F, slot, directory, NewDir).
 get_file(F, Exists, Ext, Dir, Default, File) :-
